Changelog
=========


1.3 (unreleased)
----------------

- Nothing changed yet.


1.2 (2012-09-27)
----------------

- Add z3c.autoinclude entry point (target=plone).
  [jone]

- Prepare for public release.
  [jone]

- Move package to github and clean it up.
  [jone]


1.1 (2012-04-16)
----------------

- Update to extjs v3.4 for ie9 compatibilities.
  [eschmutz]