@@ -14,6 +14,13 @@
         description=""
         provides="Products.GenericSetup.interfaces.EXTENSION" />
 
+    <genericsetup:registerProfile
+        name="grid-filter"
+        title="collective.js.extjs : exts grid filtering"
+        directory="profiles/grid-filter"
+        description=""
+        provides="Products.GenericSetup.interfaces.EXTENSION" />
+
     <browser:resourceDirectory
         name="collective.js.extjs-resources"
         directory="resources" />
