@@ -1,0 +1,30 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+
+    <stylesheet
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/css/GridFilters.css"
+        enabled="1"
+        title=""
+        media="screen"
+        rel="stylesheet"
+        rendering="import"
+        cacheable="False"
+        compression="safe"
+        cookable="False"
+        expression=""
+        />
+
+    <stylesheet
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/css/RangeMenu.css"
+        enabled="1"
+        title=""
+        media="screen"
+        rel="stylesheet"
+        rendering="import"
+        cacheable="False"
+        compression="safe"
+        cookable="False"
+        expression=""
+        />
+
+</object>
