@@ -1,0 +1,85 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/menu/RangeMenu.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/menu/ListMenu.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/GridFilters.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/Filter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/StringFilter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/DateFilter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/ListFilter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/NumericFilter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+    <javascript
+        id="++resource++collective.js.extjs-resources/ux/gridfilters/filter/BooleanFilter.js"
+        enabled="1"
+        cacheable="True"
+        compression="safe"
+        cookable="True"
+        expression=""
+        />
+
+</object>
