@@ -5,7 +5,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add a generic setup profile ``grid-filter`` which registers the necessary
+  resources (JS / CSS) for using the ExtJS grid filter plugin.
+  [jone]
 
 
 1.2 (2012-09-27)
